feat: change item processing logic
